--- a/environment.yml
+++ b/environment.yml
@@ -3,213 +3,106 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - appnope=0.1.2=py39h6e9494a_1
-  - apptools=5.1.0=pyh44b312d_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blosc=1.21.0=he49afe7_0
-  - brotlipy=0.7.0=py39h89e85a6_1001
+  - brotli=1.0.9=h0d85af4_6
+  - brotli-bin=1.0.9=h0d85af4_6
   - bzip2=1.0.8=h0d85af4_4
-  - c-ares=1.17.2=h0d85af4_0
-  - ca-certificates=2021.5.30=h033912b_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2021.5.30=py39h6e9494a_0
-  - cffi=1.14.6=py39he338e87_1
-  - cftime=1.5.0=py39hc89836e_0
-  - chardet=4.0.0=py39h6e9494a_1
-  - charset-normalizer=2.0.0=pyhd8ed1ab_0
+  - ca-certificates=2021.10.8=h033912b_0
+  - certifi=2021.10.8=py38h50d1736_1
   - colorama=0.4.4=pyh9f0ad1d_0
-  - configobj=5.0.6=py_0
-  - cryptography=3.4.7=py39ha2c9959_0
-  - curl=7.79.0=hb861fe1_0
-  - cvxopt=1.2.6=py39h3314f5d_1
-  - cycler=0.10.0=py_2
-  - dbus=1.13.6=ha13b53f_2
-  - debugpy=1.4.1=py39h9fcab8e_0
-  - decorator=5.1.0=pyhd8ed1ab_0
-  - deprecated=1.2.12=pyh44b312d_0
-  - dipy=1.3.0=py39hbaf7cf3_0
-  - double-conversion=3.1.5=he49afe7_2
-  - dsdp=5.8=h6e329d1_1203
-  - eigen=3.4.0=h940c156_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - envisage=6.0.1=pyhd8ed1ab_0
-  - expat=2.4.1=he49afe7_0
-  - ffmpeg=4.3.2=h4dad6da_0
-  - fftw=3.3.10=nompi_h02cd531_100
-  - flake8=3.9.2=pyhd8ed1ab_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - flake8=4.0.1=pyhd8ed1ab_2
   - fooof=1.0.0=pyh5ca1d4c_0
   - freetype=2.10.4=h4cff582_1
-  - gettext=0.19.8.1=hd1a6beb_1006
-  - gl2ps=1.4.2=h4cff582_0
-  - glew=2.1.0=h046ec9c_2
-  - glib=2.68.4=he49afe7_1
-  - glib-tools=2.68.4=he49afe7_1
-  - glpk=4.65=h0f52abe_1004
-  - gmp=6.2.1=h2e338ed_0
-  - gnutls=3.6.13=h756fd2b_1
-  - gsl=2.7=h93259b0_0
-  - h5py=3.3.0=nompi_py39h1bb8402_100
-  - hdf4=4.2.15=hefd3b78_3
-  - hdf5=1.10.6=nompi_hc5d9132_1114
-  - icu=68.1=h74dc148_0
-  - idna=3.1=pyhd3deb0d_0
-  - imageio=2.9.0=py_0
-  - imageio-ffmpeg=0.4.5=pyhd8ed1ab_0
-  - importlib-metadata=4.8.1=py39h6e9494a_0
-  - importlib_metadata=4.8.1=hd8ed1ab_0
-  - importlib_resources=5.2.2=pyhd8ed1ab_0
-  - ipykernel=6.4.1=py39h71a6800_0
-  - ipython=7.27.0=py39h71a6800_0
-  - ipython_genutils=0.2.0=py_1
+  - giflib=5.2.1=hbcb3906_2
+  - importlib-metadata=4.11.3=py38h50d1736_0
   - jbig=2.1=h0d85af4_2003
-  - jedi=0.18.0=py39h6e9494a_2
-  - joblib=1.0.1=pyhd8ed1ab_0
-  - jpeg=9d=hbcb3906_0
-  - jsoncpp=1.9.4=h940c156_3
-  - jupyter_client=7.0.3=pyhd8ed1ab_0
-  - jupyter_core=4.8.1=py39h6e9494a_0
-  - kiwisolver=1.3.2=py39hf018cea_0
-  - krb5=1.19.2=hcfbf3a7_0
-  - lame=3.100=h35c211d_1001
+  - jpeg=9e=h0d85af4_0
+  - kiwisolver=1.4.0=py38h8b7791e_0
   - lcms2=2.12=h577c468_0
-  - lerc=2.2.1=h046ec9c_0
-  - libblas=3.9.0=11_osx64_openblas
-  - libcblas=3.9.0=11_osx64_openblas
-  - libclang=11.1.0=default_he082bbe_1
-  - libcurl=7.79.0=hf45b732_0
-  - libcxx=12.0.1=habf9029_0
-  - libdeflate=1.7=h35c211d_5
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=haf1e3a3_1
-  - libffi=3.4.2=he49afe7_1
+  - lerc=3.0=he49afe7_0
+  - libblas=3.9.0=13_osx64_openblas
+  - libbrotlicommon=1.0.9=h0d85af4_6
+  - libbrotlidec=1.0.9=h0d85af4_6
+  - libbrotlienc=1.0.9=h0d85af4_6
+  - libcblas=3.9.0=13_osx64_openblas
+  - libcxx=13.0.1=hc203e6f_0
+  - libdeflate=1.10=h0d85af4_0
+  - libffi=3.4.2=h0d85af4_5
   - libgfortran=5.0.0=9_3_0_h6c81a4c_23
   - libgfortran5=9.3.0=h6c81a4c_23
-  - libglib=2.68.4=hf1fb8c0_1
-  - libiconv=1.16=haf1e3a3_0
-  - liblapack=3.9.0=11_osx64_openblas
-  - libllvm11=11.1.0=hd011deb_2
-  - libnetcdf=4.8.0=nompi_hb4d10b0_103
-  - libnghttp2=1.43.0=h07e645a_0
-  - libogg=1.3.4=h35c211d_1
-  - libopenblas=0.3.17=openmp_h3351f45_1
+  - liblapack=3.9.0=13_osx64_openblas
+  - libopenblas=0.3.18=openmp_h3351f45_0
   - libpng=1.6.37=h7cec526_2
-  - libpq=13.3=hea3049e_0
-  - libsodium=1.0.18=hbcb3906_1
-  - libssh2=1.10.0=h52ee1ee_0
-  - libtheora=1.1.1=h0d85af4_1005
-  - libtiff=4.3.0=h1167814_1
-  - libvorbis=1.3.7=h046ec9c_0
-  - libwebp-base=1.2.1=h0d85af4_0
-  - libxml2=2.9.12=h93ec3fd_0
-  - libzip=1.8.0=h8b0c345_0
-  - llvm-openmp=12.0.1=hda6cdc1_1
-  - loguru=0.5.3=py39h6e9494a_2
+  - libtiff=4.3.0=h17f2ce3_3
+  - libwebp=1.2.2=h28dabe5_0
+  - libwebp-base=1.2.2=h0d85af4_1
+  - libxcb=1.13=h0d85af4_1004
+  - libzlib=1.2.11=h9173be1_1013
+  - llvm-openmp=13.0.1=hcb1a161_1
   - lz4-c=1.9.3=he49afe7_1
-  - matplotlib=3.4.3=py39h6e9494a_0
-  - matplotlib-base=3.4.3=py39hb07454d_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mayavi=4.7.2=py39h6b386cf_4
+  - matplotlib=3.2.2=1
+  - matplotlib-base=3.2.2=py38h1300a51_1
   - mccabe=0.6.1=py_1
-  - meshio=4.4.6=pyhd8ed1ab_0
-  - metis=5.1.0=h2e338ed_1006
-  - mffpy=0.6.3=pyhd8ed1ab_0
-  - mne=0.23.4=pyhd8ed1ab_0
-  - mock=4.0.3=py39h6e9494a_1
-  - mpfr=4.1.0=h0f52abe_1
-  - mysql-common=8.0.25=h694c41f_2
-  - mysql-libs=8.0.25=h115446f_2
-  - ncurses=6.2=h2e338ed_4
-  - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - netcdf4=1.5.7=nompi_py39hfa5ec60_100
-  - nettle=3.6=hedd7734_0
-  - nibabel=3.2.1=pyhd8ed1ab_0
-  - nilearn=0.8.1=pyhd8ed1ab_0
-  - nspr=4.30=hcd9eead_0
-  - nss=3.69=h31e2bf1_0
-  - numexpr=2.7.3=py39h4d6be9b_0
-  - numpy=1.21.2=py39h7eed0ac_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openh264=2.1.1=hfd3ada9_0
+  - mne-base=0.23.4=pyhd8ed1ab_3
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.3=he49afe7_0
+  - numpy=1.22.3=py38hd52c74b_0
   - openjpeg=2.4.0=h6e7aa92_1
-  - openssl=1.1.1l=h0d85af4_0
-  - packaging=21.0=pyhd8ed1ab_0
-  - pandas=1.3.3=py39h4d6be9b_0
-  - parso=0.8.2=pyhd8ed1ab_0
-  - patsy=0.5.1=py_0
-  - pcre=8.45=he49afe7_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.3.2=py39he9bb72f_0
-  - pip=21.2.4=pyhd8ed1ab_0
-  - proj=7.2.0=h78d1473_2
-  - prompt-toolkit=3.0.20=pyha770c72_0
-  - psutil=5.8.0=py39h89e85a6_1
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pugixml=1.11.4=he49afe7_0
-  - pycodestyle=2.7.0=pyhd8ed1ab_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pydicom=2.2.1=pyh6c4a22f_0
-  - pyface=7.3.0=pyh44b312d_1
-  - pyflakes=2.3.1=pyhd8ed1ab_0
-  - pygments=2.10.0=pyhd8ed1ab_0
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py39h6e9494a_7
-  - pyqt-impl=5.12.3=py39hef7122c_7
-  - pyqt5-sip=4.19.18=py39hd8f94c5_7
-  - pyqtchart=5.12=py39hef7122c_7
-  - pyqtwebengine=5.12.1=py39hef7122c_7
-  - pysocks=1.7.1=py39h6e9494a_3
-  - pysurfer=0.11.0=py_0
-  - pytables=3.6.1=py39hd07922a_3
-  - python=3.9.7=h1248fe1_1_cpython
+  - openssl=3.0.0=h0d85af4_2
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.4.1=py38ha53d530_0
+  - pip=22.0.4=pyhd8ed1ab_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - pycodestyle=2.8.0=pyhd8ed1ab_0
+  - pyflakes=2.4.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - python=3.8.12=h43ca1e7_3_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-picard=0.6=pyh8a188c0_0
-  - python_abi=3.9=2_cp39
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pyvista=0.32.1=pyhd8ed1ab_0
-  - pyvistaqt=0.5.0=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py39h89e85a6_1
-  - pyzmq=22.3.0=py39h7fec2f1_0
-  - qt=5.12.9=h126340a_4
-  - qtpy=1.11.1=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pytz=2022.1=pyhd8ed1ab_0
+  - pyyaml=6.0=py38h96a0964_3
   - readline=8.1=h05e3726_0
-  - requests=2.26.0=pyhd8ed1ab_0
-  - scikit-learn=0.24.2=py39hd2caeff_1
-  - scipy=1.7.1=py39h056f1c0_0
-  - scooby=0.5.7=pyhd8ed1ab_0
-  - setuptools=58.0.4=py39h6e9494a_0
+  - scipy=1.8.0=py38hd329d04_1
+  - setuptools=60.10.0=py38h50d1736_0
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.36.0=h23a322b_1
-  - statsmodels=0.12.2=py39hc89836e_0
-  - suitesparse=5.10.1=h68a9093_0
-  - tbb=2020.2=h940c156_4
-  - tbb-devel=2020.2=h940c156_4
-  - threadpoolctl=2.2.0=pyh8a188c0_0
-  - tk=8.6.11=h5dbffcc_1
-  - tornado=6.1=py39h89e85a6_1
-  - tqdm=4.62.2=pyhd8ed1ab_0
-  - traitlets=5.1.0=pyhd8ed1ab_0
-  - traits=6.2.0=py39h89e85a6_0
-  - traitsui=7.2.0=pyhd8ed1ab_0
-  - typing_extensions=3.10.0.0=pyha770c72_0
-  - tzdata=2021a=he74cb21_1
-  - urllib3=1.26.6=pyhd8ed1ab_0
-  - utfcpp=3.2.1=h694c41f_0
-  - vtk=9.0.1=no_osmesa_py39h9af63fb_109
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.0=pyhd8ed1ab_1
-  - wrapt=1.12.1=py39h89e85a6_3
-  - x264=1!161.3030=h0d85af4_1
-  - xlrd=2.0.1=pyhd8ed1ab_3
+  - sqlite=3.37.1=hb516253_0
+  - tk=8.6.12=h5dbffcc_0
+  - tornado=6.1=py38h96a0964_2
+  - tqdm=4.63.0=pyhd8ed1ab_0
+  - tzdata=2022a=h191b570_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h35c211d_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
   - xz=5.2.5=haf1e3a3_1
-  - yaml=0.2.5=haf1e3a3_0
-  - zeromq=4.3.4=he49afe7_1
-  - zipp=3.5.0=pyhd8ed1ab_0
-  - zlib=1.2.11=h7795811_1010
-  - zstd=1.5.0=h582d3a0_0
+  - yaml=0.2.5=h0d85af4_2
+  - zipp=3.7.0=pyhd8ed1ab_1
+  - zlib=1.2.11=h9173be1_1013
+  - zstd=1.5.2=h582d3a0_0
+  - pip:
+    - appnope==0.1.2
+    - asttokens==2.0.5
+    - backcall==0.2.0
+    - debugpy==1.5.1
+    - decorator==5.1.1
+    - entrypoints==0.4
+    - executing==0.8.3
+    - ipykernel==6.9.2
+    - ipython==8.1.1
+    - jedi==0.18.1
+    - jupyter-client==7.1.2
+    - jupyter-core==4.9.2
+    - matplotlib-inline==0.1.3
+    - nest-asyncio==1.5.4
+    - parso==0.8.3
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - prompt-toolkit==3.0.28
+    - psutil==5.9.0
+    - ptyprocess==0.7.0
+    - pure-eval==0.2.2
+    - pygments==2.11.2
+    - pyzmq==22.3.0
+    - stack-data==0.2.0
+    - traitlets==5.1.1
+    - wcwidth==0.2.5
 prefix: /opt/anaconda3/envs/one-over-f
